# ISR3D

./: LICENSE  build.cartesius.sh  build.eagle.sh  build.linux.sh  build.sh  loadmuscle.sh
UQ/: UQtutorial.ipynb  UQtutorial.py  job_array.sl  postprocessing.py
UQ/function/: BCastStage3.sh  sample_generator.py
UQ/slurm/: job_array.sl
UQ/template/: input_stage4.ymmsl
config/: input_stage1.cfg  input_stage4.ymmsl
cxa/: input_stage4.ymmsl
docs/: Contributors.md  MUSCLE3_ISR3D_on_Eagle.md  README.md
kernel/: AnisotropicDiffusion.tar.xz
kernel/absmc/: build.sh  build.xml  prepareGeneratedStent.sh  prepareGeneratedStent_UQ.sh  prepareStentFromFEM.sh
kernel/absmc/data/: gp_eq.sh  gp_fr.sh  m_enc.sh  split_dat.sh
kernel/absmc/data/99_template/: absmc.cfg
kernel/absmc/src/: CMakeLists.txt  absmc2D.h  absmc3D.h
kernel/absmc/src/app3D/: csvArteryLoader3D.cpp  deployment3D-stent.cpp  deployment3D.cpp  equilibration3D.cpp  generateCuboid.cpp  generateRidgedChannel.cpp  generateSimpleCylinder.cpp  generateSmoothCylinder.cpp  inflation3D.cpp  pressurizationDisplacement3D.cpp  runStandAlone3D.cpp  uniaxialStrainTest.cpp
kernel/absmc/src/coast/: SMCController.cpp
kernel/absmc/src/core/: accumulativeNeighbourDetector.h  adaptiveRKIntegrator.h  adaptiveRKIntegrator.hh  agentAccessor.h  agentBase.h  agentContainer.h  agentContainer.hh  agentFactory.h  agentFileReader.h  agentFileReader.hh  agentFunctors.h  agentPredicates.h  agentRule.h  agentSolver.h  centerline.h  currentNeighbourDetector.h  euclideanMetrics.h  force.h  geometry.h  integrator.h  integratorController.h  mathUtil.h  neighbourCache.h  neighbourCacheWrapper.h  neighbourDetector.h  neighbourIO.h  neighbourIO.hh  pointSet.h  slowScaleNeighbourDetector.h  staticNeighbourDetector.h  trajectorySet.h  verletNeighbourDetector.h  zzInclude.h
kernel/absmc/src/graphics/: colormaps.h  imageTool.h  imageTool.hh  imageWriter.h  imageWriter.hh  pixMap.h  rgb.h  vtkWriter.h  vtkWriter.hh  zzInclude.h
kernel/absmc/src/model2D/: cellBase2D.h  drhForce2D.h  geometryGenerator2D.cpp  geometryGenerator2D.h  iel2D.h  smc2D.h  zzInclude.h
kernel/absmc/src/model3D/: agentFactory3D.h  agentFunctors3D.h  agentRules3D.h  analysisUtils3D.h  cellBase3D.h  ecm3D.h  eel3D.h  eelRules3D.h  endo3D.h  endoRules3D.h  forces3D.h  geometryGenerator3D.cpp  geometryGenerator3D.h  iel3D.h  ielRules3D.h  obstacle3D.h  simpleBalloon3D.h  simpleStent3D.h  smc3D.h  smcRules3D.h  zzInclude.h
kernel/absmc/src/multiscale/: MultiscaleAgentSolver.h  SMCController.cpp
kernel/collector/: build.sh  build.xml
kernel/collector/src/: CMakeLists.txt  collector.cpp
kernel/distributor/: build.sh  build.xml
kernel/distributor/src/: CMakeLists.txt  distributor.cpp
kernel/flow3d/: build.sh  build.xml
kernel/flow3d/src/: CMakeLists.txt  FlowController3D.cpp  FlowSolver.h  flowFileInput.h  flowFileOutput.h  initialization.h
kernel/voxelizer/: build.sh  build.xml
kernel/voxelizer/src/: CMakeLists.txt  voxelizer.cpp  voxelizer.hpp
lib/: install_palabos.sh
lib/kdtree/: euclideanMetrics.h  geometry.h  hit.h  kdtree.h  kdtree.hh  node.h  select.h  vectorAccessor.h  visitor.h  zzInclude.h
lib/mapping/: intPoint.hpp  morphologyTools3D.hpp  percolator.hpp  sphere.hpp  sphereVoxelizer.hpp  surfaceDetector.hpp
lib/util/: agentTypeId.h  config.h  config.hh  fileUtil.h  logger.h  miscUtil.h  random.h  simpleStatistics.h  timer.h  typeNames.hpp  zzInclude.h
scripts/: csv_to_dat.sh  read-palabos-array.py  rotate_zx.sh  rotate_zy.sh  sample_generator.py
scripts/vmtk/: binary2vtk.py  run.sh  vtk2numpy.py  wss_extract.py
